--- a/app/src/main/res/layout/activity_work.xml
+++ b/app/src/main/res/layout/activity_work.xml
@@ -20,12 +20,11 @@
         android:id="@+id/button"
         android:layout_width="350dp"
         android:layout_height="50dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="148dp"
+        android:layout_marginTop="150dp"
         android:text="Button"
         android:textOff="Basic Course in Probability"
         android:textOn="Basic Course in Probability"
-        app:layout_constraintEnd_toStartOf="@+id/button2"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -33,12 +32,11 @@
         android:id="@+id/button18"
         android:layout_width="350dp"
         android:layout_height="50dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="260dp"
+        android:layout_marginTop="250dp"
         android:text="Button"
         android:textOff="Diffis 1"
         android:textOn="Diffis 1"
-        app:layout_constraintEnd_toStartOf="@+id/button2"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -46,12 +44,11 @@
         android:id="@+id/button19"
         android:layout_width="350dp"
         android:layout_height="50dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="204dp"
+        android:layout_marginTop="200dp"
         android:text="Button"
         android:textOff="C Programming"
         android:textOn="C Programming"
-        app:layout_constraintEnd_toStartOf="@+id/button2"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
@@ -59,12 +56,11 @@
         android:id="@+id/button20"
         android:layout_width="350dp"
         android:layout_height="50dp"
-        android:layout_marginStart="28dp"
-        android:layout_marginTop="320dp"
+        android:layout_marginTop="300dp"
         android:text="Button"
         android:textOff="Johdatus Opiskeluun"
         android:textOn="Johdatus Opiskeluun"
-        app:layout_constraintEnd_toStartOf="@+id/button2"
+        app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
 
