--- a/app/src/main/res/drawable/btn_toggle.xml
+++ b/app/src/main/res/drawable/btn_toggle.xml
@@ -1,5 +1,53 @@
 <?xml version="1.0" encoding="utf-8"?>
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_checked="false" android:drawable="@color/colorPrimary"  />
-    <item android:state_checked="true" android:drawable="@color/colorAccent"  />
+    <item android:state_checked="false">
+        <shape>
+            <corners
+                android:bottomLeftRadius="30dp"
+                android:bottomRightRadius="30dp"
+                android:radius="60dp"
+                android:topLeftRadius="30dp"
+                android:topRightRadius="30dp" />
+
+            <padding
+                android:bottom="0dp"
+                android:left="0dp"
+                android:right="0dp"
+                android:top="0dp" />
+
+            <size
+                android:height="30dp"
+                android:width="90dp" />
+
+            <solid
+                android:color="@color/colorPrimary"/>
+
+        </shape>
+    </item>
+
+
+    <item android:state_checked="true">
+        <shape>
+            <corners
+                android:bottomLeftRadius="30dp"
+                android:bottomRightRadius="30dp"
+                android:radius="60dp"
+                android:topLeftRadius="30dp"
+                android:topRightRadius="30dp" />
+
+            <padding
+                android:bottom="0dp"
+                android:left="0dp"
+                android:right="0dp"
+                android:top="0dp" />
+
+            <size
+                android:height="30dp"
+                android:width="90dp" />
+
+            <solid
+                android:color="@color/colorAccent"/>
+
+        </shape>
+    </item>
 </selector>
