--- a/app/src/main/res/drawable/btn_toggle_ripple.xml
+++ b/app/src/main/res/drawable/btn_toggle_ripple.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <ripple
     xmlns:android="http://schemas.android.com/apk/res/android"
-    android:color="#FF0000"
+    android:color="@color/colorAccent"
     >
     <item>
         <selector xmlns:android="http://schemas.android.com/apk/res/android">
@@ -26,7 +26,10 @@
 
                     <solid
                         android:color="@color/colorPrimary"/>
-
+                    <stroke
+                        android:width="5px"
+                        android:color="@color/black"
+                        />
                 </shape>
             </item>
 
@@ -52,6 +55,10 @@
 
                     <solid
                         android:color="@color/colorAccent"/>
+                    <stroke
+                        android:width="5px"
+                        android:color="@color/black"
+                        />
 
                 </shape>
             </item>
