all int buttons

--- a/app/src/main/res/layout/activity_interests.xml
+++ b/app/src/main/res/layout/activity_interests.xml
@@ -23,6 +23,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="324dp"
+        android:background="@drawable/btn_toggle_ripple"
         android:text="Button"
         android:textOff="Comedy"
         android:textOn="Comedy"
@@ -36,6 +37,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="264dp"
         android:text="Button"
+        android:background="@drawable/btn_toggle_ripple"
         android:textOff="Reading"
         android:textOn="Reading"
         app:layout_constraintEnd_toStartOf="@+id/button3"
@@ -48,6 +50,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="324dp"
+        android:background="@drawable/btn_toggle_ripple"
         android:text="Button"
         android:textOff="Music"
         android:textOn="Music"
@@ -61,6 +64,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="264dp"
+        android:background="@drawable/btn_toggle_ripple"
         android:text="Button"
         android:textOff="Parties"
         android:textOn="Parties"
@@ -74,6 +78,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="264dp"
+        android:background="@drawable/btn_toggle_ripple"
         android:text="Button"
         android:textOff="Shopping"
         android:textOn="Shopping"
@@ -86,6 +91,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="324dp"
+        android:background="@drawable/btn_toggle_ripple"
         android:text="Button"
         android:textOff="Biking"
         android:textOn="Biking"
@@ -99,6 +105,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="264dp"
+        android:background="@drawable/btn_toggle_ripple"
         android:text="Button"
         android:textOff="Walking"
         android:textOn="Walking"
@@ -111,6 +118,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="208dp"
+        android:background="@drawable/btn_toggle_ripple"
         android:text="Button"
         android:textOff="Travel"
         android:textOn="Travel"
@@ -123,6 +131,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="208dp"
+        android:background="@drawable/btn_toggle_ripple"
         android:text="Button"
         android:textOff="Art"
         android:textOn="Art"
@@ -135,6 +144,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="208dp"
+        android:background="@drawable/btn_toggle_ripple"
         android:text="Button"
         android:textOff="Coffee"
         android:textOn="Coffee"
@@ -148,6 +158,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="208dp"
+        android:background="@drawable/btn_toggle_ripple"
         android:text="Button"
         android:textOff="Gaming"
         android:textOn="Gaming"
@@ -161,6 +172,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="150dp"
+        android:background="@drawable/btn_toggle_ripple"
         android:text="Button"
         android:textOff="Movies"
         android:textOn="Movies"
@@ -173,6 +185,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="150dp"
+        android:background="@drawable/btn_toggle_ripple"
         android:text="Button"
         android:textOff="Soccer"
         android:textOn="Soccer"
@@ -185,6 +198,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="150dp"
+        android:background="@drawable/btn_toggle_ripple"
         android:text="Button"
         android:textOff="Climbing"
         android:textOn="Climbing"
@@ -197,6 +211,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="150dp"
+        android:background="@drawable/btn_toggle_ripple"
         android:text="Button"
         android:textOff="Golf"
         android:textOn="Golf"
