--- a/app/src/main/res/drawable/btn_toggle.xml
+++ b/app/src/main/res/drawable/btn_toggle.xml
@@ -1,53 +1,69 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_checked="false">
-        <shape>
-            <corners
-                android:bottomLeftRadius="30dp"
-                android:bottomRightRadius="30dp"
-                android:radius="60dp"
-                android:topLeftRadius="30dp"
-                android:topRightRadius="30dp" />
+<ripple
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:color="@color/colorAccent"
+    >
+    <item>
+        <selector xmlns:android="http://schemas.android.com/apk/res/android">
+            <item android:state_checked="false">
+                <shape>
+                    <corners
+                        android:bottomLeftRadius="30dp"
+                        android:bottomRightRadius="30dp"
+                        android:radius="60dp"
+                        android:topLeftRadius="30dp"
+                        android:topRightRadius="30dp" />
 
-            <padding
-                android:bottom="0dp"
-                android:left="0dp"
-                android:right="0dp"
-                android:top="0dp" />
+                    <padding
+                        android:bottom="0dp"
+                        android:left="0dp"
+                        android:right="0dp"
+                        android:top="0dp" />
 
-            <size
-                android:height="30dp"
-                android:width="90dp" />
+                    <size
+                        android:height="30dp"
+                        android:width="90dp" />
 
-            <solid
-                android:color="@color/colorPrimary"/>
+                    <solid
+                        android:color="@color/colorPrimary"/>
+                    <stroke
+                        android:width="5px"
+                        android:color="@color/black"
+                        />
+                </shape>
+            </item>
 
-        </shape>
+
+            <item android:state_checked="true">
+                <shape>
+                    <corners
+                        android:bottomLeftRadius="30dp"
+                        android:bottomRightRadius="30dp"
+                        android:radius="60dp"
+                        android:topLeftRadius="30dp"
+                        android:topRightRadius="30dp" />
+
+                    <padding
+                        android:bottom="0dp"
+                        android:left="0dp"
+                        android:right="0dp"
+                        android:top="0dp" />
+
+                    <size
+                        android:height="30dp"
+                        android:width="90dp" />
+
+                    <solid
+                        android:color="@color/colorAccent"/>
+                    <stroke
+                        android:width="5px"
+                        android:color="@color/black"
+                        />
+
+                </shape>
+            </item>
+        </selector>
     </item>
 
 
-    <item android:state_checked="true">
-        <shape>
-            <corners
-                android:bottomLeftRadius="30dp"
-                android:bottomRightRadius="30dp"
-                android:radius="60dp"
-                android:topLeftRadius="30dp"
-                android:topRightRadius="30dp" />
-
-            <padding
-                android:bottom="0dp"
-                android:left="0dp"
-                android:right="0dp"
-                android:top="0dp" />
-
-            <size
-                android:height="30dp"
-                android:width="90dp" />
-
-            <solid
-                android:color="@color/colorAccent"/>
-
-        </shape>
-    </item>
-</selector>
+</ripple>
