--- a/app/src/main/res/layout/activity_interests.xml
+++ b/app/src/main/res/layout/activity_interests.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
@@ -10,7 +9,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="324dp"
-        android:background="@drawable/btn_toggle_ripple"
+        android:background="@drawable/btn_toggle"
         android:text="Button"
         android:textOff="Tech"
         android:textOn="Tech"
@@ -23,7 +22,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="324dp"
-        android:background="@drawable/btn_toggle_ripple"
+        android:background="@drawable/btn_toggle"
         android:text="Button"
         android:textOff="Comedy"
         android:textOn="Comedy"
@@ -37,7 +36,7 @@
         android:layout_height="wrap_content"
         android:layout_marginTop="264dp"
         android:text="Button"
-        android:background="@drawable/btn_toggle_ripple"
+        android:background="@drawable/btn_toggle"
         android:textOff="Reading"
         android:textOn="Reading"
         app:layout_constraintEnd_toStartOf="@+id/button3"
@@ -50,7 +49,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="324dp"
-        android:background="@drawable/btn_toggle_ripple"
+        android:background="@drawable/btn_toggle"
         android:text="Button"
         android:textOff="Music"
         android:textOn="Music"
@@ -64,7 +63,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="264dp"
-        android:background="@drawable/btn_toggle_ripple"
+        android:background="@drawable/btn_toggle"
         android:text="Button"
         android:textOff="Parties"
         android:textOn="Parties"
@@ -78,7 +77,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="264dp"
-        android:background="@drawable/btn_toggle_ripple"
+        android:background="@drawable/btn_toggle"
         android:text="Button"
         android:textOff="Shopping"
         android:textOn="Shopping"
@@ -91,7 +90,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="324dp"
-        android:background="@drawable/btn_toggle_ripple"
+        android:background="@drawable/btn_toggle"
         android:text="Button"
         android:textOff="Biking"
         android:textOn="Biking"
@@ -105,7 +104,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="264dp"
-        android:background="@drawable/btn_toggle_ripple"
+        android:background="@drawable/btn_toggle"
         android:text="Button"
         android:textOff="Walking"
         android:textOn="Walking"
@@ -118,7 +117,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="208dp"
-        android:background="@drawable/btn_toggle_ripple"
+        android:background="@drawable/btn_toggle"
         android:text="Button"
         android:textOff="Travel"
         android:textOn="Travel"
@@ -131,7 +130,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="208dp"
-        android:background="@drawable/btn_toggle_ripple"
+        android:background="@drawable/btn_toggle"
         android:text="Button"
         android:textOff="Art"
         android:textOn="Art"
@@ -144,7 +143,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="208dp"
-        android:background="@drawable/btn_toggle_ripple"
+        android:background="@drawable/btn_toggle"
         android:text="Button"
         android:textOff="Coffee"
         android:textOn="Coffee"
@@ -158,7 +157,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="208dp"
-        android:background="@drawable/btn_toggle_ripple"
+        android:background="@drawable/btn_toggle"
         android:text="Button"
         android:textOff="Gaming"
         android:textOn="Gaming"
@@ -172,7 +171,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="150dp"
-        android:background="@drawable/btn_toggle_ripple"
+        android:background="@drawable/btn_toggle"
         android:text="Button"
         android:textOff="Movies"
         android:textOn="Movies"
@@ -185,7 +184,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="150dp"
-        android:background="@drawable/btn_toggle_ripple"
+        android:background="@drawable/btn_toggle"
         android:text="Button"
         android:textOff="Soccer"
         android:textOn="Soccer"
@@ -198,7 +197,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="150dp"
-        android:background="@drawable/btn_toggle_ripple"
+        android:background="@drawable/btn_toggle"
         android:text="Button"
         android:textOff="Climbing"
         android:textOn="Climbing"
@@ -211,7 +210,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginTop="150dp"
-        android:background="@drawable/btn_toggle_ripple"
+        android:background="@drawable/btn_toggle"
         android:text="Button"
         android:textOff="Golf"
         android:textOn="Golf"
