--- a/app/src/main/res/layout/activity_work.xml
+++ b/app/src/main/res/layout/activity_work.xml
@@ -21,6 +21,7 @@
         android:layout_width="350dp"
         android:layout_height="50dp"
         android:layout_marginTop="150dp"
+        android:background="@drawable/btn_toggle"
         android:text="Button"
         android:textOff="Basic Course in Probability"
         android:textOn="Basic Course in Probability"
@@ -32,36 +33,42 @@
         android:id="@+id/button18"
         android:layout_width="350dp"
         android:layout_height="50dp"
-        android:layout_marginTop="250dp"
+        android:layout_marginTop="12dp"
+        android:background="@drawable/btn_toggle"
         android:text="Button"
         android:textOff="Diffis 1"
         android:textOn="Diffis 1"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.508"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/button19" />
 
     <ToggleButton
         android:id="@+id/button19"
         android:layout_width="350dp"
         android:layout_height="50dp"
-        android:layout_marginTop="200dp"
+        android:layout_marginTop="12dp"
+        android:background="@drawable/btn_toggle"
         android:text="Button"
         android:textOff="C Programming"
         android:textOn="C Programming"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.508"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/button" />
 
     <ToggleButton
         android:id="@+id/button20"
         android:layout_width="350dp"
         android:layout_height="50dp"
-        android:layout_marginTop="300dp"
+        android:layout_marginTop="16dp"
+        android:background="@drawable/btn_toggle"
         android:text="Button"
         android:textOff="Johdatus Opiskeluun"
         android:textOn="Johdatus Opiskeluun"
         app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.508"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@+id/button18" />
 
 </androidx.constraintlayout.widget.ConstraintLayout>
