--- a/app/src/main/res/layout/activity_work.xml
+++ b/app/src/main/res/layout/activity_work.xml
@@ -40,8 +40,8 @@
         android:layout_marginEnd="10dp"
         android:background="@drawable/btn_toggle"
         android:text="Button"
-        android:textOff="Diffis 1"
-        android:textOn="Diffis 1"
+        android:textOff="Calculus"
+        android:textOn="Calculus"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.508"
         app:layout_constraintStart_toStartOf="parent"
@@ -72,8 +72,8 @@
         android:layout_marginEnd="10dp"
         android:background="@drawable/btn_toggle"
         android:text="Button"
-        android:textOff="Johdatus Opiskeluun"
-        android:textOn="Johdatus Opiskeluun"
+        android:textOff="Linear Algebra"
+        android:textOn="Linear Algebra"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.508"
         app:layout_constraintStart_toStartOf="parent"
